refactor: command bus and caching